# kpi

./: .gitignore  README.md
Ro_graph_editor/: CMakeLists.txt  main.cpp
Ro_graph_editor/core/: main_game_loop.cpp  main_game_loop.h  scene.h  window.cpp  window.h
Ro_graph_editor/core/common_types/: igame_object.h
basics_of_client_dev/: index.php  style.css
basics_of_client_dev/lab_1/source/: lock_free_programming.html
basics_of_client_dev/lab_1/source/resource/: style.css
basics_of_client_dev/lab_2/source/: index.html  style.css
basics_of_client_dev/lab_3/source/: game_engine.html  main.html  reflection_system.html  tutorial_cmake.html
basics_of_client_dev/lab_4/source/: index.html  style.css
basics_of_client_dev/lab_5/source/resource/: comp.xcf  original.xcf
basics_of_client_dev/lab_6/source/: index.php  style.css
basics_of_client_dev/lab_7/source/: creator_tool.php  creator_tool_controller.php  index.php  main_functions.php  style.css
basics_of_client_dev/lab_8/source/: functions.js  index.html  style.css
basics_of_client_dev/lab_9/source/: functions.js  index.php
ro_graph_editor/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  ro_graph_editor  ro_graph_editor.cbp
ro_graph_editor/core/: window.cpp  window.h
ro_graph_editor/core/common_systems/: event_system.cpp  event_system.h  main_game_loop.cpp  main_game_loop.h  scene.cpp  scene.h  user_interface.cpp  user_interface.h
ro_graph_editor/core/common_types/: igame_object.h  sf_line_width.hpp
ro_graph_editor/core/game_objects/: camera.hpp  moveable_circle.hpp
